--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -99,6 +99,19 @@ nav {
     display: none;
 }
 
+.btn-edit-menu{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    font-size: 15px;
+    font-weight: 600;
+    background: transparent;
+    border: 1px solid transparent;
+    color: var(--white);
+    cursor: pointer;
+}
+
 @media screen and (min-width: 1024px) {
     .logo-container {
         display: flex;
